# Faktury

./: CFaktura.cpp  CFaktura.h  CKalendarz.cpp  CKalendarz.h  CMakeLists.txt  CNabywca.cpp  CNabywca.h  CPodmiot.cpp  CPodmiot.h  CScheduler.cpp  CScheduler.h  CSprzedawca.cpp  CSprzedawca.h  CTowar.cpp  CTowar.h  main.cpp
